--- a/MemoryCardGame/style.css
+++ b/MemoryCardGame/style.css
@@ -27,6 +27,7 @@ html,body{
     top: 20%;
     left: 50%;
     transform: translate(-50%,-20%);
+    opacity: 0.7;
 }
 
 .card{
@@ -34,4 +35,44 @@ html,body{
     height: 30px;
     object-fit: cover;
     object-position: center;
+    opacity: 1;
+}
+
+.win{
+    width: 100vw;
+    height: 100vh;
+    background-image: linear-gradient(to right , rgba(0,0,0,0.5),rgba(0,0,0,0.5));
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+
+}
+.win_{
+    animation: show 1s linear forwards;
+}
+
+@-webkit-keyframes show{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+.win p{
+    color: white;
+    text-align: center;
+    width: 100px;
+    height: 30px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image:  linear-gradient(to right , rgba(0,0,0,0.9),rgba(0,0,0,0.9));;
 }
