--- a/Connect_Four/style.css
+++ b/Connect_Four/style.css
@@ -15,3 +15,56 @@ html,body{
     
 }
 
+.squres{
+    width: 142px;
+    height: 142px;
+    background-color: lightgray;
+    border: 1px solid orange;
+    display: flex;
+    flex-direction: row;
+    border-radius: 2px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.squres div{
+    width:20px;
+    height: 20px;
+    border:0.5px solid green ;
+}
+
+.blue_player{
+    background-color: blue;
+    border-radius: 10px;
+
+}
+
+.red_player{
+    background-color: red;
+    border-radius: 10px;
+    
+}
+
+.blue{
+    color: blue;
+    position: absolute;
+    left: 5%;
+    top: 5%;
+    display: none;
+}
+
+.red{
+    color: red;
+    position: absolute;
+    right: 10%;
+    top: 5%;
+    display: none;
+}
+
+.display{
+    display: block;
+}
