--- a/Nokia 3310 Snake/style.css
+++ b/Nokia 3310 Snake/style.css
@@ -5,7 +5,8 @@
 }
 
 html , body{
-    width: 100vw;
+    overflow: hidden;
+    max-width: 100vw;
     height: 100vh;
     background-image: linear-gradient(to right , rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('./pexels-suzy-hazelwood-1822568.jpg');
     background-position: center;
@@ -28,7 +29,7 @@ html , body{
     background-color: lightgray;
 }
 
-.SnakeBored div{
+.cell{
     width: 30px;
     height: 30px;
     border: 1px solid black ;
@@ -41,4 +42,66 @@ html , body{
 .apple{
     background-color: purple;
     
+}
+
+p{
+    color: white;
+    padding: 10px;
+    font-size: 25px;
+    position: relative;
+    left: 5%;
+    top: 5%;
+}
+
+span{
+    margin-left: 30px;
+    color: white;
+    padding: 10px;
+    font-size: 25px;
+    position: absolute;
+    left: 5%;
+    top: 5%;
+}
+
+.score{
+    max-width: 100vw !important;
+    height: 100vh;
+    position: absolute;
+    left: 0%;
+    top: 0%;
+    opacity: 0;
+    pointer-events: all;
+    background-image: linear-gradient(to right , rgba(0,0,0,0.7), rgba(0,0,0,0.7));
+    z-index: -10;
+}
+
+.show_{
+    animation: show 1s linear forwards;
+    z-index: 10;
+}
+
+.show_no{
+    display: none;
+}
+
+@-webkit-keyframes show{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+button{
+    width: 100px;
+    height: 50px;
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
+    position: absolute;
+    top: 15%;
+    left: 5%;
+    cursor: pointer;
+    pointer-events: all;
 }
