--- a/Nokia 3310 Snake/style.css
+++ b/Nokia 3310 Snake/style.css
@@ -6,7 +6,7 @@
 
 html , body{
     overflow: hidden;
-    max-width: 100vw;
+    width: 100vw;
     height: 100vh;
     background-image: linear-gradient(to right , rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('./pexels-suzy-hazelwood-1822568.jpg');
     background-position: center;
@@ -64,7 +64,7 @@ span{
 }
 
 .score{
-    max-width: 100vw !important;
+    width: 100vw;
     height: 100vh;
     position: absolute;
     left: 0%;
@@ -72,7 +72,7 @@ span{
     opacity: 0;
     pointer-events: all;
     background-image: linear-gradient(to right , rgba(0,0,0,0.7), rgba(0,0,0,0.7));
-    z-index: -10;
+    
 }
 
 .show_{
@@ -82,7 +82,7 @@ span{
 
 .show_no{
     display: none;
-}
+} 
 
 @-webkit-keyframes show{
     0%{
@@ -98,6 +98,7 @@ button{
     height: 50px;
     padding: 5px;
     border: none;
+    z-index: 1;
     border-radius: 5px;
     position: absolute;
     top: 15%;
